--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,18 @@
   <version>1.0-SNAPSHOT</version>
   <name>AudioPlayer</name>
 
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>License</url>
+    </license>
+  </licenses>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.10.0</junit.version>
     <openjfx.version>21</openjfx.version>
     <maven.compiler.version>3.11.0</maven.compiler.version>
+    <javafx.media.version>17.0.2</javafx.media.version>
   </properties>
 
   <dependencies>
@@ -43,7 +50,7 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-media</artifactId>
-      <version>17.0.2</version>
+      <version>${javafx.media.version}</version>
     </dependency>
   </dependencies>
 
