Created test classes.

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
       <artifactId>javafx-media</artifactId>
       <version>${javafx.media.version}</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+    </dependency>
   </dependencies>
 
   <build>
